--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,20 +1,25 @@
 body{
     background-color: hsl(212, 45%, 89%);
+
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .card-qr{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 290px;
+    width: 20rem;
 
-    margin: auto;
-    row-gap: 20px;
+    /*margin: auto;*/
+    row-gap: 1rem;
     background-color: white;
     
-    position: absolute;
+    /*position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);*/
 
     border-radius: 20px;
     box-shadow: 0px 10px 15px 0px hsla(212, 37%, 81%, 0.733);
@@ -22,13 +27,13 @@ body{
 }
 
 img{
-    max-width: 260px;
+    max-width: 280px;
     margin: auto;
     border-radius: 10px;
-    margin-top: 15px;
+    margin-top: 1rem;
 }
 
-h2{
+h1{
     margin: auto;
     max-width: 250px;
     color: hsl(218, 44%, 22%);
@@ -46,5 +51,5 @@ p{
     text-align: center;
     font-size: 15px;
 
-    margin-bottom: 25px;
+    margin-bottom: 2rem;
 }
